# nemo-fileroller

./: ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
nemo/: Makefile.am  Makefile.in  fileroller-module.c  nemo-fileroller.c  nemo-fileroller.h
po/: POTFILES.in  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cs.po  csb.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  fy.po  ga.po  gl.po  gu.po  he.po  hi.po  (+60 more)
